test/tasty/neg/src-2/TestHKNest2.check
TestHKNest2_fail.scala:7: error: no type parameters for method foo: (x: tastytest.HKNest.Quuux[F])String exist so that it can be applied to arguments (tastytest.HKNest.Quuux[tastytest.HKNest.QuxArg])
 --- because ---
argument expression's type is not compatible with formal parameter type;
 found   : tastytest.HKNest.Quuux[tastytest.HKNest.QuxArg]
 required: tastytest.HKNest.Quuux[?F]

  def test14 = new HKClass_14[Quuux].foo(new Quuux[QuxArg])
                                     ^
TestHKNest2_fail.scala:7: error: type mismatch;
 found   : tastytest.HKNest.Quuux[tastytest.HKNest.QuxArg]
 required: tastytest.HKNest.Quuux[F]
  def test14 = new HKClass_14[Quuux].foo(new Quuux[QuxArg])
                                         ^
2 errors
